[package]
name = "yt-history"
version = "0.1.0"
edition = "2021"

[profile.release]
# Enable debug info for function names in profiling tools
debug = true

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
colored = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
testlib = { path = "testlib" }
